package com.iokays.designpatterns.factorymethond;

import com.iokays.designpatterns.simplefactory.Pizza;

public class NYStylePepperoniPizza extends Pizza {
}
